--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 #Ignores All .log files
 *.log
-.vscode/*
-/.vscode/settings.json
+.vscode/* 
+.vscode/settings.json
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history.vscode/settings.json
