--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@
 !.vscode/tasks.json 
 !.vscode/launch.json 
 !.vscode/extensions.json 
-!.vscode/extensions.json/c_cpp_properties.json 
+!.vscode/c_cpp_properties.json 
 .history.vscode/settings.json
